# Grafica-P3

./: README.md
E2-Iluminacion/: CMakeLists.txt
E2-Iluminacion/2.1.basic_lighting_diffuse/: 2.1.basic_lighting.vs  basic_lighting_diffuse.cpp  basic_lighting_diffuse_tetraedro.cpp
E2-Iluminacion/include/: glad.c
E2-Iluminacion/include/glad/: glad.h
